# cel

./: .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  vite.config.js
apps/desktop/src/: main.js  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: index.html
docs/public/: index.html
docs/schema/: v1.json
presets/: arrow.aanim  blink.aanim  bounce.aanim  check.aanim  clock.aanim  dna.aanim  fade-in.aanim  fade-out.aanim  fire.aanim  grow.aanim  heartbeat.aanim  loading.aanim  marquee.aanim  matrix.aanim  orbit.aanim  pulse.aanim  rain.aanim  scan.aanim  shake.aanim  sleeping.aanim  slide-in.aanim  slide-out.aanim  snake.aanim  sparkle.aanim  spinner.aanim  stars.aanim  swing.aanim  twirl.aanim  typewriter.aanim  wave.aanim  zoom.aanim
