[package]
name = "ascii-anim-cli"
version = "0.1.0"
description = "CLI for ASCII Anim — validate, render, and play .aanim scenes"
edition = "2021"

[[bin]]
name = "ascii-anim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossterm = "0.28"
libc = "0.2"
