[package]
name = "cel-cli"
version = "0.1.0"
description = "CLI for Cel — validate, render, and play .aanim scenes"
edition = "2021"

[[bin]]
name = "cel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossterm = "0.28"
ctrlc = "3"
